Add pop-up context menu for select and copy actions.